# sgss-wiki

./: .env.example  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
assets/stylesheets/: extra.css
changes/evolution_changes/: index.html
changes/pokemon_changes/: index.html
data/documentation/: Action Replay Codes.txt  Changelog.txt  Credits.txt  Evolution Changes.txt  Forum Post.txt  Item Locations.txt  Patching Guide.txt  Pokemon Changes.txt  Pokemon Locations.txt  Special Event Guide.txt  Special Events.txt  Trainer Pokemon.txt
docs/: index.md
docs/changes/: evolution_changes.md  pokemon_changes.md
docs/getting_started/: changelog.md  credits.md  download_links.md  known_bugs.md  patching_guide.md
docs/locations/: locations.md
docs/mechanics/: action_replay_codes.md  evolution_changes.md  important_item_locations.md  pokemon_changes.md  pokemon_locations.md  special_event_guide.md  trainer_pokemon.md
docs/pokedex/: abilities.md  items.md  moves.md  pokemon.md
docs/pokemon/: abomasnow.md  abra.md  absol.md  aerodactyl.md  aggron.md  aipom.md  alakazam.md  altaria.md  ambipom.md  ampharos.md  anorith.md  arbok.md  arcanine.md  arceus.md  ariados.md  armaldo.md  aron.md  articuno.md  azelf.md  azumarill.md  azurill.md  bagon.md  baltoy.md  banette.md  (+484 more)
search/: search_index.json
src/: evolution_changes.py  important_item_locations.py  main.sh  media_fetcher.py  pokemon.py  pokemon_changes.py  pokemon_locations.py  special_event_guide.py  trainer_pokemon.py
stylesheets/: extra.css
(+4508 files in other folders)
